# Haskell_From_First_Principles

./: README.md
ch02/: learn.hs  test.hs
ch03/: print2.hs
ch04/: mood.hs
ch06/: eqInstances.hs  mood.hs  sillyExample.hs
ch07/: arith2.hs  arith4.hs  registeredUser1.hs
ch08/: exercises.hs  factorial.hs  recursion.hs
ch09/: exercises.hs  lists.hs
ch1/: README.md
ch10/: database.hs
ch11/: asPatterns.hs  binarytree.hs  cipher.hs  fiction.hs  jammin.hs  logicGoats.hs  programmers.hs  vehicles.hs
ch12/: examples.hs
ch13/hangman/: hangman.cabal
ch13/hangman/.stack-work/install/x86_64-osx/lts-6.10/7.10.3/flag-cache/: random-1.1-bddd14dad36e804462e2232164520f8f  split-0.2.3.1-6d0063c12972868a1e069995047d6884
ch13/hangman/src/: Main.hs
ch15/: ex.hs  madlib.hs
ch17/: ex.hs
ch18/: eithermonad.hs  ex.hs
ch2/: exercises.hs  functionWithWhere.hs
ch3/: exercises.hs  print1.hs  print3flipped.hs
ch4/: exercises.hs  greetIfCool1.hs
ch5/: typeInference1.hs
ch6/: dayExample.hs  trivialExample.hs
ch7/: case.hs  exercises.hs  matchingTuples.hs  penguins.hs
ch8/: divideBy.hs  maybe.hs  wordNumber.hs
ch9/: cipher.hs  poemLines.hs
